@@ -2,6 +2,10 @@
 # This is an initial configuration file for the SCTP subsystem.
 #
 
+# Kernel modules to load in load order.
+SCTP_PRELOAD=""
+SCTP_DRIVERS=""
+SCTP_MODULES="sctp"
 # Make real character devices before intializing subsystem?
 SCTP_MAKEDEVICES="no"
 # Remove devices after removing subsystem?
@@ -9,19 +13,18 @@ SCTP_REMOVEDEVICES="no"
 
 # =============================================================================
 # 
-# @(#) $RCSfile: sctp,v $ $Name:  $($Revision: 0.9.2.1 $) $Date: 2006/03/29 11:28:01 $
+# @(#) $RCSfile: sctp,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2007/03/12 04:14:17 $
 #
 # -----------------------------------------------------------------------------
 #
-# Copyright (c) 2001-2006  OpenSS7 Corporation <http://www.openss7.com/>
+# Copyright (c) 2001-2007  OpenSS7 Corporation <http://www.openss7.com/>
 # Copyright (c) 1997-2000  Brian F. G. Bidulock <bidulock@openss7.org>
 #
 # All Rights Reserved.
 #
 # This program is free software; you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software
-# Foundation; either version 2 of the License, or (at your option) any later
-# version.
+# Foundation; version 2 of the License.
 #
 # This program is distributed in the hope that it will be useful, but WITHOUT
 # ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
@@ -55,7 +58,7 @@ SCTP_REMOVEDEVICES="no"
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2006/03/29 11:28:01 $ by $Author: brian $
+# Last Modified $Date: 2007/03/12 04:14:17 $ by $Author: brian $
 #
 # =============================================================================
 # vim ft=conf
