@@ -1,5 +1,10 @@
 2007-03-12  Brian Bidulock  <bidulock@openss7.org>
 
+	* util/init/sctp: do not preload sctp
+	* util/init/sctp.sh: do not preload sctp
+	* util/sysconfig/sctp: do not preload sctp
+	  - preloading sctp messes up strsctp installcheck
+
 	* test/test-tcpc.c: test updates
 
 2007-03-11  Brian Bidulock  <bidulock@openss7.org>
